Issue TOC: removing aligning by the galleys #2

--- a/less/objects/article_summary.less
+++ b/less/objects/article_summary.less
@@ -10,16 +10,6 @@
  *
  */
 
-/*
-.article_summary {
-	display: flex;
-	flex-direction: column;
-}
-
-.article_summary_body {
-	flex: 1 1 auto;
-}
-*/
 
 .summary_title {
 	font-family: @font-family-primary;
@@ -40,7 +30,7 @@
 }
 
 .summary_meta {
-	padding-top: 30px;
+	margin-top: 20px;
 	font-family: @font-family-primary;
 	line-height: 1.25;
 	font-size: 16px;
@@ -52,30 +42,24 @@
 }
 
 .article_summary {
-	display: flex;
+	max-width: 33.3%;
 	flex-grow: 1;
-	flex-shrink: 0;
-	flex-basis: auto;
-	flex-direction: column;
+	margin-bottom: 60px;
+	padding-right: 20px;
 }
 
-.article_summary_body {
-	flex: 1 1 auto;
-}
 
-@media (min-width: 992px) {
+@media (min-width: 768px) and (max-width: 1199px) {
 	.article_summary {
-		max-width: 33.3%;
+		max-width: 50%;
 	}
 	.article_summary:not(:last-child) {
 		padding-right: 4%;
 	}
-	.articlesGroup:not(:last-child) {
-		padding-bottom: 72px;
-	}
 }
 
-@media (max-width: 991px) {
+
+@media (max-width: 767px) {
 	.article_summary {
 		max-width: 100%;
 	}
