--- a/less/objects/galley_link.less
+++ b/less/objects/galley_link.less
@@ -11,7 +11,7 @@
  */
 
 .galleys_links {
-	padding-top: 47px;
+	margin-top: 25px;
 }
 
 .galley-link {
