--- a/less/objects/issue_toc.less
+++ b/less/objects/issue_toc.less
@@ -60,9 +60,9 @@
 	border-bottom: 2px solid #bcbcbc;
 }
 
-.articlesGroup {
+.section_content {
 	display: flex;
-	flex-flow: row wrap;
+	flex-wrap: wrap;
 }
 
 .more_button {
@@ -103,12 +103,6 @@
 @media (min-width: 992px) {
 	.full_issue_label {
 		max-width: 50%;
-	}
-}
-
-@media (max-width: 991px) {
-	.articlesGroup {
-		flex-direction: column;
 	}
 }
 
